trunk/Archive2/1c/f8e6d70d16b6f7/output
main.cpp:4:19: error: expected unqualified-id before 'new'
     static void*  new(std::size_t sz)
                   ^
main.cpp:4:16: error: expected ';' at end of member declaration
     static void*  new(std::size_t sz)
                ^
main.cpp:4:19: error: expected unqualified-id before 'new'
     static void*  new(std::size_t sz)
                   ^
